--- a/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -144,9 +144,11 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/ThirdPersonBP/Maps/NewMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -178,4 +180,8 @@ FourPanes2x2.Viewport 1.Viewport2.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.Viewport3.TypeWithinLayout=Default
 FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
+
+[MRU]
+MRUItem0=/Game/ThirdPersonBP/Maps/Level_1
+MRUItem1=/Game/ThirdPersonBP/Maps/NewMap
 
