--- a/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -172,7 +172,7 @@ InstalledPlugins=XRVisualization
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1287.200 Y=727.200
+WindowSize=X=1287.000 Y=727.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -196,7 +196,7 @@ MRUItem1=/Game/ThirdPersonBP/Maps/NewMap
 LastLogListing=LoadErrors
 
 [Directories2]
-UNR=../../../../../Lost_Animal/Lost_Animal/Content/ThirdPersonBP/Maps
+UNR=../../../../Lost_Animal/Lost_Animal/Content/ThirdPersonBP/Maps
 BRUSH=../../../../../Lost_Animal/Lost_Animal/Content/
 FBX=../../../../../Lost_Animal/Lost_Animal/Content/
 FBXAnim=../../../../../Lost_Animal/Lost_Animal/Content/
@@ -1034,12 +1034,12 @@ MaterialEditor.TimeStamp=2021.04.02-09.33.50
 MaterialEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Maps/Level_1
-MRUItem1=/Game/Stylized_PBR_Nature/Rocks/Materials/M_Rock_Master
-MRUItem2=/Game/PN_OpenWorldFoliage/Materials/MI_OpenWorldGround
-MRUItem3=/Game/PN_OpenWorldFoliage/Materials/MA_OpenWorldGround
-MRUItem4=/Game/StarterContent/Materials/M_Metal_Gold
-MRUItem5=/Game/LandscapeMaterial
+MRUItem0=/Game/LandscapeMaterial
+MRUItem1=/Game/ThirdPersonBP/Maps/Level_1
+MRUItem2=/Game/Stylized_PBR_Nature/Rocks/Materials/M_Rock_Master
+MRUItem3=/Game/PN_OpenWorldFoliage/Materials/MI_OpenWorldGround
+MRUItem4=/Game/PN_OpenWorldFoliage/Materials/MA_OpenWorldGround
+MRUItem5=/Game/StarterContent/Materials/M_Metal_Gold
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
@@ -1052,7 +1052,6 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [LandscapeEdit]
-ToolStrength=1.000000
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
 WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
@@ -1069,6 +1068,7 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
+BrushFalloff=1.000000
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
@@ -1144,6 +1144,8 @@ MaterialExpressionScalarParameter.CustomPrimitiveData=True
 MaterialEditorInstanceConstant.ParameterGroups=True
 MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
 
 [DetailPropertyExpansion]
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[1]\" \"Object.Layers.Layers[2]\" \"Object.Layers.Layers[3]\" "
