--- a/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/WaterPlane/Lake/Textures
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -193,7 +193,7 @@ MRUItem0=/Game/ThirdPersonBP/Maps/Level_1
 MRUItem1=/Game/ThirdPersonBP/Maps/NewMap
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=LightingResults
 
 [Directories2]
 UNR=../../../../Lost_Animal/Lost_Animal/Content/ThirdPersonBP/Maps
@@ -1032,10 +1032,12 @@ MovieSceneCapture.TimeStamp=2021.04.02-09.33.51
 MovieSceneCapture.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2021.04.02-09.33.50
 MaterialEditor.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2021.04.02-09.33.48
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LandscapeMaterial
-MRUItem1=/Game/ThirdPersonBP/Maps/Level_1
+MRUItem0=/Game/ThirdPersonBP/Maps/Level_1
+MRUItem1=/Game/LandscapeMaterial
 MRUItem2=/Game/Stylized_PBR_Nature/Rocks/Materials/M_Rock_Master
 MRUItem3=/Game/PN_OpenWorldFoliage/Materials/MI_OpenWorldGround
 MRUItem4=/Game/PN_OpenWorldFoliage/Materials/MA_OpenWorldGround
@@ -1068,7 +1070,7 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
-BrushFalloff=1.000000
+ToolStrength=1.000000
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
@@ -1146,6 +1148,41 @@ MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
 
 [DetailPropertyExpansion]
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[1]\" \"Object.Layers.Layers[2]\" \"Object.Layers.Layers[3]\" "
@@ -1221,4 +1258,7 @@ bMaterialQualityUsed[3]=0
 bShowGrid=True
 bDrawGrid=False
 PrimType=1
+
+[PlacementMode]
+RecentlyPlaced=/Game/WaterPlane/Meshes/SM_OceanWater.SM_OceanWater;
 
