--- a/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,7 +154,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/ThirdPersonBP/Maps/Level_1
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -172,7 +172,7 @@ InstalledPlugins=XRVisualization
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1288.800 Y=728.800
+WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -196,7 +196,7 @@ MRUItem1=/Game/ThirdPersonBP/Maps/NewMap
 LastLogListing=LoadErrors
 
 [Directories2]
-UNR=../../../../../Lost_Animal/Lost_Animal/Content/ThirdPersonBP/Maps
+UNR=../../../../Lost_Animal/Lost_Animal/Content/ThirdPersonBP/Maps
 BRUSH=../../../../../Lost_Animal/Lost_Animal/Content/
 FBX=../../../../../Lost_Animal/Lost_Animal/Content/
 FBXAnim=../../../../../Lost_Animal/Lost_Animal/Content/
