--- a/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -198,7 +198,7 @@ MRUItem3=/Game/ThirdPersonBP/Maps/NewMap
 LastLogListing=LoadErrors
 
 [Directories2]
-UNR=../../../../../Lost_Animal/Lost_Animal/Content/ThirdPersonBP/Maps
+UNR=../../../../Lost_Animal/Lost_Animal/Content/ThirdPersonBP/Maps
 BRUSH=../../../../../Lost_Animal/Lost_Animal/Content/
 FBX=../../../../../Lost_Animal/Lost_Animal/Content/
 FBXAnim=../../../../../Lost_Animal/Lost_Animal/Content/
