--- a/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -157,7 +157,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/ThirdPersonBP/Maps/Level_1
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
