--- a/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/WaterPlane/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Maps
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -157,7 +157,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/ThirdPersonBP/Maps/Level_1
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -172,7 +172,7 @@ InstalledPlugins=XRVisualization
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1295.200 Y=735.200
+WindowSize=X=1295.000 Y=735.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -198,7 +198,7 @@ MRUItem3=/Game/ThirdPersonBP/Maps/NewMap
 LastLogListing=LoadErrors
 
 [Directories2]
-UNR=../../../../../Lost_Animal/Lost_Animal/Content/ThirdPersonBP/Maps
+UNR=../../../../Lost_Animal/Lost_Animal/Content/ThirdPersonBP/Maps
 BRUSH=../../../../../Lost_Animal/Lost_Animal/Content/
 FBX=../../../../../Lost_Animal/Lost_Animal/Content/
 FBXAnim=../../../../../Lost_Animal/Lost_Animal/Content/
