--- a/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Lost_Animal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -190,9 +190,10 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MRU]
 MRUItem0=/Game/ThirdPersonBP/Maps/Level_1
-MRUItem1=/Game/Stylized_PBR_Nature/Maps/Stylized_Nature_ExampleScene
-MRUItem2=/Game/Stylized_PBR_Nature/Maps/Asset_Scene
-MRUItem3=/Game/ThirdPersonBP/Maps/NewMap
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/Stylized_PBR_Nature/Maps/Stylized_Nature_ExampleScene
+MRUItem3=/Game/Stylized_PBR_Nature/Maps/Asset_Scene
+MRUItem4=/Game/ThirdPersonBP/Maps/NewMap
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -1043,17 +1044,18 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Maps/Level_1
-MRUItem1=/Game/Stylized_PBR_Nature/Maps/Stylized_Nature_ExampleScene
-MRUItem2=/Game/Stylized_PBR_Nature/Foliage/Assets/SM_Grass
-MRUItem3=/Game/PN_OpenWorldFoliage/Meshes/openWorld_grass_02_03_04
-MRUItem4=/Game/Stylized_PBR_Nature/Maps/Asset_Scene
-MRUItem5=/Game/Stylized_PBR_Nature/Maps/dirt_LayerInfo
-MRUItem6=/Game/Stylized_PBR_Nature/Foliage/Assets/SM_Common_Tree_11
-MRUItem7=/Game/Stylized_PBR_Nature/Rocks/Materials/M_Rock_Master
-MRUItem8=/Game/PN_OpenWorldFoliage/Materials/MI_OpenWorldGround
-MRUItem9=/Game/PN_OpenWorldFoliage/Materials/MA_OpenWorldGround
-MRUItem10=/Game/StarterContent/Materials/M_Metal_Gold
-MRUItem11=/Game/LandscapeMaterial
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/Stylized_PBR_Nature/Maps/Stylized_Nature_ExampleScene
+MRUItem3=/Game/Stylized_PBR_Nature/Foliage/Assets/SM_Grass
+MRUItem4=/Game/PN_OpenWorldFoliage/Meshes/openWorld_grass_02_03_04
+MRUItem5=/Game/Stylized_PBR_Nature/Maps/Asset_Scene
+MRUItem6=/Game/Stylized_PBR_Nature/Maps/dirt_LayerInfo
+MRUItem7=/Game/Stylized_PBR_Nature/Foliage/Assets/SM_Common_Tree_11
+MRUItem8=/Game/Stylized_PBR_Nature/Rocks/Materials/M_Rock_Master
+MRUItem9=/Game/PN_OpenWorldFoliage/Materials/MI_OpenWorldGround
+MRUItem10=/Game/PN_OpenWorldFoliage/Materials/MA_OpenWorldGround
+MRUItem11=/Game/StarterContent/Materials/M_Metal_Gold
+MRUItem12=/Game/LandscapeMaterial
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
@@ -1786,7 +1788,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ExponentialHeightFog="\"Object.ExponentialHeightFog.Component.Object.FogInscatteringColor\" \"Object.ExponentialHeightFog.Component.Object.VolumetricFogAlbedo\" "
 Info="\"Object.ExponentialHeightFog.Component.Object.FogInscatteringColor\" \"Object.ExponentialHeightFog.Component.Object.VolumetricFogAlbedo\" "
-StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshActor=
 ProjectPackagingSettings="\"Object.Packaging.IniKeyBlacklist\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings=
